Parser/test_cases/bad/classbadname.cl
class test {
  foo:Test;
  bar():Int {5};
};
